# Magnetic-Sim

./: CMakeLists.txt  README  README.md
include/: Cursor.hpp  MagneticField.hpp  Particle.hpp
shaders/: fragment.glsl  vertex.glsl
src/: Cursor.cpp  MagneticField.cpp  Particle.cpp  main.cpp
